RESOLVED FIXED145862
WKWebsiteDataStore should handle removing plug-in data
https://bugs.webkit.org/show_bug.cgi?id=145862
Summary WKWebsiteDataStore should handle removing plug-in data
Anders Carlsson
Reported 2015-06-10 16:35:06 PDT
WKWebsiteDataStore should handle removing plug-in data
Attachments
Patch (14.90 KB, patch)
2015-06-10 16:36 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2015-06-10 16:36:01 PDT
WebKit Commit Bot
Comment 2 2015-06-10 16:38:49 PDT
Attachment 254689 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.cpp:126: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessManager.cpp:105: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.h:83: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.h:176: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Plugins/PluginProcessManager.h:66: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 5 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-06-10 17:28:10 PDT
Note You need to log in before you can comment on or make changes to this bug.