Source/WebKit2/PluginProcess/PluginProcess.h
@@ -98,9 +98,11 @@ private:
     void didReceivePluginProcessMessage(IPC::Connection&, IPC::MessageDecoder&);
     void initializePluginProcess(PluginProcessCreationParameters&&);
     void createWebProcessConnection();
+
     void getSitesWithData(uint64_t callbackID);
     void clearSiteData(const Vector<String>& sites, uint64_t flags, uint64_t maxAgeInSeconds, uint64_t callbackID);
-    
+    void deleteWebsiteData(std::chrono::system_clock::time_point modifiedSince, uint64_t callbackID);
+
     // AudioHardwareListenerClient
     virtual void audioHardwareDidBecomeActive() override;
     virtual void audioHardwareDidBecomeInactive() override;
