Source/WebKit2/UIProcess/Plugins/PluginProcessManager.cpp
@@ -102,6 +102,13 @@ void PluginProcessManager::fetchWebsiteData(const PluginModuleInfo& plugin, std:
     pluginProcess->fetchWebsiteData(WTF::move(completionHandler));
 }
 
+void PluginProcessManager::deleteWebsiteData(const PluginModuleInfo& plugin, std::chrono::system_clock::time_point modifiedSince, std::function<void ()> completionHandler)
+{
+    PluginProcessProxy* pluginProcess = getOrCreatePluginProcess(pluginProcessToken(plugin, PluginProcessTypeNormal, PluginProcessSandboxPolicyNormal));
+
+    pluginProcess->deleteWebsiteData(modifiedSince, WTF::move(completionHandler));
+}
+
 void PluginProcessManager::clearSiteData(const PluginModuleInfo& plugin, WebPluginSiteDataManager* webPluginSiteDataManager, const Vector<String>& sites, uint64_t flags, uint64_t maxAgeInSeconds, uint64_t callbackID)
 {
     PluginProcessProxy* pluginProcess = getOrCreatePluginProcess(pluginProcessToken(plugin, PluginProcessTypeNormal, PluginProcessSandboxPolicyNormal));
